# torch-fmsynth

./: .clang-format  CMakeLists.txt  build.sh
plugin/: CMakeLists.txt
plugin/source/: Envelope.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SuperSlider.h  SynthSignal.h
src/: CMakeLists.txt  main.cpp
